add title header

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
           <h1>Welcome</h1>
           <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
         </header>
+        <div class="header-title">
+          <h2>Hey there. I'm Bamsi</h2>
+          <h2 class="color-green">I'm a software developer</h2>
+        </div>
       </section>
     </main>
   </body>
