--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
           <h2>Hey there. I'm Bamsi</h2>
           <h2 class="color-green">I'm a software developer</h2>
         </div>
+        <div class="header-body">
+          <p>
+            I can help you build a product , feature or website Look through
+            some of my work and experience! If you like what you see and have a
+            project you need coded, don’t hestiate to contact me.
+          </p>
+        </div>
       </section>
     </main>
   </body>
