--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
             project you need coded, don’t hestiate to contact me.
           </p>
         </div>
+        <div class="icon-wrapper">
+          <ul class="icons">
+            <li>
+              <a href="#"><img src="images/cat.png" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/in.png" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/v.png" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/twitter.png" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/m.png" /></a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
