--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <main class="main-container">
+      <header class="toolbar">
+        <h1>Welcome</h1>
+        <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
+      </header>
       <section class="top-header">
-        <header class="toolbar">
-          <h1>Welcome</h1>
-          <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
-        </header>
         <div class="header-title">
           <h2>Hey there. I'm Bamsi</h2>
           <h2 class="color-green">I'm a software developer</h2>
@@ -43,6 +43,10 @@
               <a href="#"><img src="images/m.png" /></a>
             </li>
           </ul>
+        </div>
+
+        <div class="down-arrow">
+          <img src="images/arrow.png" alt="arrow" />
         </div>
       </section>
     </main>
