fix styling error

--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
         <div class="icon-wrapper">
           <ul class="icons">
             <li>
-              <a href="#"><img src="images/cat.png" /></a>
+              <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
             </li>
             <li>
-              <a href="#"><img src="images/in.png" /></a>
+              <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
             </li>
             <li>
-              <a href="#"><img src="images/v.png" /></a>
+              <a href="#"><img src="images/v.png" alt="two icon" /></a>
             </li>
             <li>
-              <a href="#"><img src="images/twitter.png" /></a>
+              <a href="#"
+                ><img src="images/twitter.png" alt="twitter icon"
+              /></a>
             </li>
             <li>
-              <a href="#"><img src="images/m.png" /></a>
+              <a href="#"><img src="images/m.png" alt="m icon" /></a>
             </li>
           </ul>
         </div>
