--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <body>
     <main class="main-container">
       <header class="toolbar">
-        <h1>Welcome</h1>
+        <a>Welcome</a>
         <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
       </header>
       <section class="top-header">
         <div class="header-title">
-          <h2>Hey there. I'm Bamsi</h2>
+          <h1>Hey there. I'm Bamsi</h1>
           <h2 class="color-green">I'm a software developer</h2>
         </div>
         <div class="header-body">
