add works title

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
           <img src="images/arrow.png" alt="arrow" />
         </div>
       </section>
+      <section class="work-container">
+        <div class="work-title">
+          <h2>My Recent Works</h2>
+        </div>
+      </section>
     </main>
   </body>
 </html>
