--- a/index.html
+++ b/index.html
@@ -83,6 +83,58 @@
                 <div class="button-link"><button>See Project</button></div>
               </div>
             </li>
+            <li class="list-item">
+              <div class="image-placeholder"></div>
+              <div class="image-desc">
+                <h2>Multi-Post Stories Gain+Glory</h2>
+                <div class="buttons">
+                  <div>Ruby on rails</div>
+                  <div>css</div>
+                  <div>JavScript</div>
+                  <div>html</div>
+                </div>
+                <div class="button-link"><button>See Project</button></div>
+              </div>
+            </li>
+            <li class="list-item">
+              <div class="image-placeholder"></div>
+              <div class="image-desc">
+                <h2>Multi-Post Stories Gain+Glory</h2>
+                <div class="buttons">
+                  <div>Ruby on rails</div>
+                  <div>css</div>
+                  <div>JavScript</div>
+                  <div>html</div>
+                </div>
+                <div class="button-link"><button>See Project</button></div>
+              </div>
+            </li>
+            <li class="list-item">
+              <div class="image-placeholder"></div>
+              <div class="image-desc">
+                <h2>Multi-Post Stories Gain+Glory</h2>
+                <div class="buttons">
+                  <div>Ruby on rails</div>
+                  <div>css</div>
+                  <div>JavScript</div>
+                  <div>html</div>
+                </div>
+                <div class="button-link"><button>See Project</button></div>
+              </div>
+            </li>
+            <li class="list-item">
+              <div class="image-placeholder"></div>
+              <div class="image-desc">
+                <h2>Multi-Post Stories Gain+Glory</h2>
+                <div class="buttons">
+                  <div>Ruby on rails</div>
+                  <div>css</div>
+                  <div>JavScript</div>
+                  <div>html</div>
+                </div>
+                <div class="button-link"><button>See Project</button></div>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
