--- a/index.html
+++ b/index.html
@@ -13,131 +13,141 @@
         <a>Welcome</a>
         <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
       </header>
-      <section class="top-header">
-        <div class="header-title">
-          <h1>Hey there. I'm Bamsi</h1>
-          <h2 class="color-green">I'm a software developer</h2>
-        </div>
-        <div class="header-body">
-          <p>
-            I can help you build a product , feature or website Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hestiate to contact me.
-          </p>
-        </div>
-        <div class="icon-wrapper">
-          <ul class="icons">
-            <li>
-              <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/v.png" alt="two icon" /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="images/twitter.png" alt="twitter icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/m.png" alt="m icon" /></a>
-            </li>
-          </ul>
-        </div>
+      <div class="home">
+        <section class="top-header">
+          <div class="header-title">
+            <h1>Hey there. I'm Bamsi</h1>
+            <h2 class="color-green">I'm a software developer</h2>
+          </div>
+          <div class="header-body">
+            <p>
+              I can help you build a product , feature or website Look through
+              some of my work and experience! If you like what you see and have
+              a project you need coded, don’t hestiate to contact me.
+            </p>
+          </div>
+          <div class="icon-wrapper">
+            <ul class="icons">
+              <li>
+                <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/v.png" alt="two icon" /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="images/twitter.png" alt="twitter icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/m.png" alt="m icon" /></a>
+              </li>
+            </ul>
+          </div>
 
-        <div class="down-arrow">
-          <img src="images/arrow.png" alt="arrow" />
-        </div>
-      </section>
-      <section class="work-container">
-        <div class="work-title">
-          <h2>My Recent Works</h2>
-        </div>
-        <div class="work-list">
-          <ul>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h2>Multi-Post Stories Gain+Glory</h2>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
+          <div class="down-arrow">
+            <img src="images/arrow.png" alt="arrow" />
+          </div>
+        </section>
+        <section class="work-container">
+          <div class="work-title">
+            <h2>My Recent Works</h2>
+          </div>
+          <div class="work-list">
+            <ul>
+              <li class="list-item">
+                <div class="image-placeholder"></div>
+                <div class="image-desc">
+                  <h2>Multi-Post Stories Gain+Glory</h2>
+                  <div class="buttons">
+                    <div>Ruby on rails</div>
+                    <div>css</div>
+                    <div>JavScript</div>
+                    <div>html</div>
+                  </div>
+                  <div class="button-link"><button>See Project</button></div>
                 </div>
-                <div class="button-link"><button>See Project</button></div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h2>Multi-Post Stories Gain+Glory</h2>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
+              </li>
+              <li class="list-item">
+                <div class="image-placeholder"></div>
+                <div class="image-desc">
+                  <h2>Multi-Post Stories Gain+Glory</h2>
+                  <div class="buttons">
+                    <div>Ruby on rails</div>
+                    <div>css</div>
+                    <div>JavScript</div>
+                    <div>html</div>
+                  </div>
+                  <div class="button-link"><button>See Project</button></div>
                 </div>
-                <div class="button-link"><button>See Project</button></div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h2>Multi-Post Stories Gain+Glory</h2>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
+              </li>
+              <li class="list-item">
+                <div class="image-placeholder"></div>
+                <div class="image-desc">
+                  <h2>Multi-Post Stories Gain+Glory</h2>
+                  <div class="buttons">
+                    <div>Ruby on rails</div>
+                    <div>css</div>
+                    <div>JavScript</div>
+                    <div>html</div>
+                  </div>
+                  <div class="button-link"><button>See Project</button></div>
                 </div>
-                <div class="button-link"><button>See Project</button></div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h2>Multi-Post Stories Gain+Glory</h2>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
+              </li>
+              <li class="list-item">
+                <div class="image-placeholder"></div>
+                <div class="image-desc">
+                  <h2>Multi-Post Stories Gain+Glory</h2>
+                  <div class="buttons">
+                    <div>Ruby on rails</div>
+                    <div>css</div>
+                    <div>JavScript</div>
+                    <div>html</div>
+                  </div>
+                  <div class="button-link"><button>See Project</button></div>
                 </div>
-                <div class="button-link"><button>See Project</button></div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h2>Multi-Post Stories Gain+Glory</h2>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
+              </li>
+              <li class="list-item">
+                <div class="image-placeholder"></div>
+                <div class="image-desc">
+                  <h2>Multi-Post Stories Gain+Glory</h2>
+                  <div class="buttons">
+                    <div>Ruby on rails</div>
+                    <div>css</div>
+                    <div>JavScript</div>
+                    <div>html</div>
+                  </div>
+                  <div class="button-link"><button>See Project</button></div>
                 </div>
-                <div class="button-link"><button>See Project</button></div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h2>Multi-Post Stories Gain+Glory</h2>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
+              </li>
+              <li class="list-item">
+                <div class="image-placeholder"></div>
+                <div class="image-desc">
+                  <h2>Multi-Post Stories Gain+Glory</h2>
+                  <div class="buttons">
+                    <div>Ruby on rails</div>
+                    <div>css</div>
+                    <div>JavScript</div>
+                    <div>html</div>
+                  </div>
+                  <div class="button-link"><button>See Project</button></div>
                 </div>
-                <div class="button-link"><button>See Project</button></div>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
+
+      <div class="about-me">
+        <section class="about-container">
+          <header class="about-header">
+            <h1>About me</h1>
+          </header>
+        </section>
+      </div>
     </main>
   </body>
 </html>
