--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
           <header class="about-header">
             <h1>About me</h1>
           </header>
+          <div class="about-desc">
+            <p>
+              I can help you build a product , feature or website Look through
+              some of my work and experience! If you like what you see and have
+              a project you need coded, don’t hestiate to contact me.
+            </p>
+          </div>
         </section>
       </div>
     </main>
