update button style

--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
               a project you need coded, don’t hestiate to contact me.
             </p>
           </div>
+          <div class="resume-button">
+            <button>Get My Resume</button>
+          </div>
         </section>
       </div>
     </main>
