fix down arrow position

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <main class="main-container">
       <header class="toolbar">
-        <a>Welcome</a>
+        <a href="#">Welcome</a>
         <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
       </header>
       <section class="top-header">
