add languages in about section

--- a/index.html
+++ b/index.html
@@ -156,6 +156,22 @@
           <div class="resume-button">
             <button>Get My Resume</button>
           </div>
+          <div class="skills-container">
+            <ul>
+              <li class="item-list">
+                <div>
+                  <img src="images/language.png" alt="icon languages" />
+                </div>
+                <div><h2>Languages</h2></div>
+                <div class="about-buttons">
+                  <div>Ruby on Rails</div>
+                  <div>Ruby</div>
+                  <div>Html</div>
+                  <div>CSS</div>
+                </div>
+              </li>
+            </ul>
+          </div>
         </section>
       </div>
     </main>
