add skills and frameworks in the about page

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="skills-container">
             <ul>
               <li class="item-list">
-                <div>
+                <div class="icon">
                   <img src="images/language.png" alt="icon languages" />
                 </div>
                 <div><h2>Languages</h2></div>
@@ -168,6 +168,33 @@
                   <div>Ruby</div>
                   <div>Html</div>
                   <div>CSS</div>
+                </div>
+              </li>
+
+              <li class="item-list">
+                <div class="icon">
+                  <img src="images/frameworks.png" alt="icon frameworks" />
+                </div>
+                <div><h2>Frameworks</h2></div>
+                <div class="about-buttons">
+                  <div>Bootstrap</div>
+                  <div>Ruby on rails</div>
+                  <div>RSpec</div>
+                  <div>Capybara</div>
+                  <div>Selenium</div>
+                </div>
+              </li>
+              <li class="item-list">
+                <div class="icon">
+                  <img src="images/skills.png" alt="icon skills" />
+                </div>
+                <div><h2>Skills</h2></div>
+                <div class="about-buttons">
+                  <div>Codekit</div>
+                  <div>Github</div>
+                  <div>Codepen</div>
+                  <div>Gitlab</div>
+                  <div>Terminal</div>
                 </div>
               </li>
             </ul>
