--- a/index.html
+++ b/index.html
@@ -13,194 +13,44 @@
         <a href="#">Welcome</a>
         <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
       </header>
-      <div class="home">
-        <section class="top-header">
-          <div class="header-title">
-            <h1>Hey there. I'm Bamsi</h1>
-            <h2 class="color-green">I'm a software developer</h2>
-          </div>
-          <div class="header-body">
-            <p>
-              I can help you build a product , feature or website Look through
-              some of my work and experience! If you like what you see and have
-              a project you need coded, don’t hestiate to contact me.
-            </p>
-          </div>
-          <div class="icon-wrapper">
-            <ul class="icons">
-              <li>
-                <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="images/v.png" alt="two icon" /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="images/twitter.png" alt="twitter icon"
-                /></a>
-              </li>
-              <li>
-                <a href="#"><img src="images/m.png" alt="m icon" /></a>
-              </li>
-            </ul>
-          </div>
+      <section class="top-header">
+        <div class="header-title">
+          <h1>Hey there. I'm Bamsi</h1>
+          <h2 class="color-green">I'm a software developer</h2>
+        </div>
+        <div class="header-body">
+          <p>
+            I can help you build a product , feature or website Look through
+            some of my work and experience! If you like what you see and have a
+            project you need coded, don’t hestiate to contact me.
+          </p>
+        </div>
+        <div class="icon-wrapper">
+          <ul class="icons">
+            <li>
+              <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/v.png" alt="two icon" /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/twitter.png" alt="twitter icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/m.png" alt="m icon" /></a>
+            </li>
+          </ul>
+        </div>
 
-          <div class="down-arrow">
-            <img src="images/arrow.png" alt="arrow" />
-          </div>
-        </section>
-        <section class="work-container">
-          <div class="work-title">
-            <h2>My Recent Works</h2>
-          </div>
-          <div class="work-list">
-            <ul>
-              <li class="list-item">
-                <div class="image-placeholder"></div>
-                <div class="image-desc">
-                  <h2>Multi-Post Stories Gain+Glory</h2>
-                  <div class="buttons">
-                    <div>Ruby on rails</div>
-                    <div>css</div>
-                    <div>JavScript</div>
-                    <div>html</div>
-                  </div>
-                  <div class="button-link"><button>See Project</button></div>
-                </div>
-              </li>
-              <li class="list-item">
-                <div class="image-placeholder"></div>
-                <div class="image-desc">
-                  <h2>Multi-Post Stories Gain+Glory</h2>
-                  <div class="buttons">
-                    <div>Ruby on rails</div>
-                    <div>css</div>
-                    <div>JavScript</div>
-                    <div>html</div>
-                  </div>
-                  <div class="button-link"><button>See Project</button></div>
-                </div>
-              </li>
-              <li class="list-item">
-                <div class="image-placeholder"></div>
-                <div class="image-desc">
-                  <h2>Multi-Post Stories Gain+Glory</h2>
-                  <div class="buttons">
-                    <div>Ruby on rails</div>
-                    <div>css</div>
-                    <div>JavScript</div>
-                    <div>html</div>
-                  </div>
-                  <div class="button-link"><button>See Project</button></div>
-                </div>
-              </li>
-              <li class="list-item">
-                <div class="image-placeholder"></div>
-                <div class="image-desc">
-                  <h2>Multi-Post Stories Gain+Glory</h2>
-                  <div class="buttons">
-                    <div>Ruby on rails</div>
-                    <div>css</div>
-                    <div>JavScript</div>
-                    <div>html</div>
-                  </div>
-                  <div class="button-link"><button>See Project</button></div>
-                </div>
-              </li>
-              <li class="list-item">
-                <div class="image-placeholder"></div>
-                <div class="image-desc">
-                  <h2>Multi-Post Stories Gain+Glory</h2>
-                  <div class="buttons">
-                    <div>Ruby on rails</div>
-                    <div>css</div>
-                    <div>JavScript</div>
-                    <div>html</div>
-                  </div>
-                  <div class="button-link"><button>See Project</button></div>
-                </div>
-              </li>
-              <li class="list-item">
-                <div class="image-placeholder"></div>
-                <div class="image-desc">
-                  <h2>Multi-Post Stories Gain+Glory</h2>
-                  <div class="buttons">
-                    <div>Ruby on rails</div>
-                    <div>css</div>
-                    <div>JavScript</div>
-                    <div>html</div>
-                  </div>
-                  <div class="button-link"><button>See Project</button></div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
-
-      <div class="about-me">
-        <section class="about-container">
-          <header class="about-header">
-            <h1>About me</h1>
-          </header>
-          <div class="about-desc">
-            <p>
-              I can help you build a product , feature or website Look through
-              some of my work and experience! If you like what you see and have
-              a project you need coded, don’t hestiate to contact me.
-            </p>
-          </div>
-          <div class="resume-button">
-            <button>Get My Resume</button>
-          </div>
-          <div class="skills-container">
-            <ul>
-              <li class="item-list">
-                <div class="icon">
-                  <img src="images/language.png" alt="icon languages" />
-                </div>
-                <div><h2>Languages</h2></div>
-                <div class="about-buttons">
-                  <div>Ruby on Rails</div>
-                  <div>Ruby</div>
-                  <div>Html</div>
-                  <div>CSS</div>
-                </div>
-              </li>
-
-              <li class="item-list">
-                <div class="icon">
-                  <img src="images/frameworks.png" alt="icon frameworks" />
-                </div>
-                <div><h2>Frameworks</h2></div>
-                <div class="about-buttons">
-                  <div>Bootstrap</div>
-                  <div>Ruby on rails</div>
-                  <div>RSpec</div>
-                  <div>Capybara</div>
-                  <div>Selenium</div>
-                </div>
-              </li>
-              <li class="item-list">
-                <div class="icon">
-                  <img src="images/skills.png" alt="icon skills" />
-                </div>
-                <div><h2>Skills</h2></div>
-                <div class="about-buttons">
-                  <div>Codekit</div>
-                  <div>Github</div>
-                  <div>Codepen</div>
-                  <div>Gitlab</div>
-                  <div>Terminal</div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+        <div class="down-arrow">
+          <img src="images/arrow.png" alt="arrow" />
+        </div>
+      </section>
     </main>
   </body>
 </html>
