--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                     <div>JavScript</div>
                     <div>html</div>
                   </div>
-                  <div class="button-link"><button>See Project</button></div>
+                  <div class="button-link">
+                    <button class="button" type="button">See Project</button>
+                  </div>
                 </div>
               </li>
               <li class="list-item">
@@ -81,7 +83,9 @@
                     <div>JavScript</div>
                     <div>html</div>
                   </div>
-                  <div class="button-link"><button>See Project</button></div>
+                  <div class="button-link">
+                    <button class="button" type="button">See Project</button>
+                  </div>
                 </div>
               </li>
               <li class="list-item">
@@ -94,7 +98,9 @@
                     <div>JavScript</div>
                     <div>html</div>
                   </div>
-                  <div class="button-link"><button>See Project</button></div>
+                  <div class="button-link">
+                    <button class="button" type="button">See Project</button>
+                  </div>
                 </div>
               </li>
               <li class="list-item">
@@ -107,7 +113,9 @@
                     <div>JavScript</div>
                     <div>html</div>
                   </div>
-                  <div class="button-link"><button>See Project</button></div>
+                  <div class="button-link">
+                    <button class="button" type="button">See Project</button>
+                  </div>
                 </div>
               </li>
               <li class="list-item">
@@ -120,7 +128,9 @@
                     <div>JavScript</div>
                     <div>html</div>
                   </div>
-                  <div class="button-link"><button>See Project</button></div>
+                  <div class="button-link">
+                    <button class="button" type="button">See Project</button>
+                  </div>
                 </div>
               </li>
               <li class="list-item">
@@ -133,7 +143,9 @@
                     <div>JavScript</div>
                     <div>html</div>
                   </div>
-                  <div class="button-link"><button>See Project</button></div>
+                  <div class="button-link">
+                    <button class="button" type="button">See Project</button>
+                  </div>
                 </div>
               </li>
             </ul>
@@ -154,7 +166,7 @@
             </p>
           </div>
           <div class="resume-button">
-            <button>Get My Resume</button>
+            <button type="button">Get My Resume</button>
           </div>
           <div class="skills-container">
             <ul>
