--- a/index.html
+++ b/index.html
@@ -211,6 +211,15 @@
           </div>
         </section>
       </div>
+
+      <section>
+        <div>
+          <h2>
+            I'm always interested in hearing about new projects, so if you'd
+            like to chat please get in touch.
+          </h2>
+        </div>
+      </section>
     </main>
   </body>
 </html>
