add contact form

--- a/index.html
+++ b/index.html
@@ -219,6 +219,38 @@
             like to chat please get in touch.
           </h2>
         </div>
+        <div>
+          <form accept="" method="POST">
+            <ul>
+              <li>
+                <input
+                  type="text"
+                  name="name"
+                  placeholder="Full name"
+                  maxlength="30"
+                  required
+                />
+              </li>
+              <li>
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="Email address"
+                  required
+                />
+              </li>
+              <li>
+                <textarea
+                  placeholder="Enter text here"
+                  name="message"
+                  maxlength="500"
+                  required
+                ></textarea>
+              </li>
+              <li><button type="submit">Get in touch</button></li>
+            </ul>
+          </form>
+        </div>
       </section>
     </main>
   </body>
