--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </section>
       </div>
 
-      <section>
+      <section class="contact-section">
         <div>
           <h2>
             I'm always interested in hearing about new projects, so if you'd
