Add contact-form class

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             like to chat please get in touch.
           </h2>
         </div>
-        <div>
+        <div class="contact-form">
           <form accept="" method="POST">
             <ul>
               <li>
