add footer section

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <!-- Title -->
     <title>My Portfolio</title>
   </head>
@@ -256,7 +259,31 @@
             </ul>
           </form>
         </div>
+        <div class="icon-wrapper">
+          <ul class="icons">
+            <li>
+              <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/v.png" alt="two icon" /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img src="images/twitter.png" alt="twitter icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"><img src="images/m.png" alt="m icon" /></a>
+            </li>
+          </ul>
+        </div>
       </section>
+      <footer class="footer-section">
+        <p>myemailhere@email.com</p>
+      </footer>
     </main>
   </body>
 </html>
