update style dimensions

--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
                   required
                 ></textarea>
               </li>
-              <li><button type="submit">Get in touch</button></li>
+              <li>
+                <button type="submit" class="button">Get in touch</button>
+              </li>
             </ul>
           </form>
         </div>
