update contact form button style

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           </h2>
         </div>
         <div class="contact-form">
-          <form accept="" method="POST">
+          <form action="https://formspree.io/f/mjvlodlr" method="POST">
             <ul>
               <li>
                 <input
