add top navigation for desktop

--- a/index.html
+++ b/index.html
@@ -17,48 +17,68 @@
   </head>
   <body>
     <main class="main-container">
-      <header class="toolbar">
-        <a href="#">Welcome</a>
-        <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
-      </header>
-      <section class="top-header">
-        <div class="header-title">
-          <h1>Hey there. I'm Bamsi</h1>
-          <h2 class="color-green">I'm a software developer</h2>
+      <section>
+        <!-- visible to mobile platforms only-->
+        <div class="header-mobile">
+          <a href="#">Welcome</a>
+          <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
         </div>
-        <div class="header-body">
-          <p>
-            I can help you build a product , feature or website Look through
-            some of my work and experience! If you like what you see and have a
-            project you need coded, don’t hestiate to contact me.
-          </p>
-        </div>
-        <div class="icon-wrapper">
-          <ul class="icons">
-            <li>
-              <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/v.png" alt="two icon" /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="images/twitter.png" alt="twitter icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/m.png" alt="m icon" /></a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="down-arrow">
-          <img src="images/arrow.png" alt="arrow" />
-        </div>
+        <!-- end visible to mobile only-->
       </section>
+      <section class="top-section">
+        <header>
+          <!-- visible to  desktop only -->
+          <div class="nav-desktop">
+            <nav class="nav">
+              <ul>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+          <!-- end visible to desktop only-->
+        </header>
+        <section>
+          <div class="header-title">
+            <h1>Hey there. I'm Bamsi</h1>
+            <h2 class="color-green">I'm a software developer</h2>
+          </div>
+          <div class="header-body">
+            <p>
+              I can help you build a product , feature or website Look through
+              some of my work and experience! If you like what you see and have
+              a project you need coded, don’t hestiate to contact me.
+            </p>
+          </div>
+          <div class="icon-wrapper">
+            <ul class="icons">
+              <li>
+                <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/v.png" alt="two icon" /></a>
+              </li>
+              <li>
+                <a href="#"
+                  ><img src="images/twitter.png" alt="twitter icon"
+                /></a>
+              </li>
+              <li>
+                <a href="#"><img src="images/m.png" alt="m icon" /></a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="down-arrow">
+            <img src="images/arrow.png" alt="arrow" />
+          </div>
+        </section>
+      </section>
+
       <section class="work-container">
         <div class="work-title">
           <h2>My Recent Works</h2>
