update header top description style to responsive design

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
   </head>
   <body>
     <main class="main-container">
-      <section>
+      <section class="header-mobile">
         <!-- visible to mobile platforms only-->
-        <div class="header-mobile">
-          <a href="#">Welcome</a>
-          <span> <img src="images/toggle.png" alt="toggle icon" /> </span>
-        </div>
+        <div><a href="#">Welcome</a></div>
+        <div><img src="images/toggle.png" alt="toggle icon" /></div>
         <!-- end visible to mobile only-->
       </section>
       <section class="top-section">
