add media query for my works section

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <div class="work-title">
           <h2>My Recent Works</h2>
         </div>
-        <div class="work-list">
-          <ul>
+        <div>
+          <ul class="work-list">
             <li class="list-item">
               <div class="image-placeholder"></div>
               <div class="image-desc">
