--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
         </div>
       </section>
 
-      <div class="about-me">
-        <section class="about-container">
+      <section class="about-container">
+        <section class="about-top">
           <header class="about-header">
             <h2>About me</h2>
           </header>
@@ -189,54 +189,55 @@
               a project you need coded, don’t hestiate to contact me.
             </p>
           </div>
-          <div class="resume-button">
-            <button type="button">Get My Resume</button>
-          </div>
-          <div class="skills-container">
-            <ul>
-              <li class="item-list">
-                <div class="icon">
-                  <img src="images/language.png" alt="icon languages" />
-                </div>
-                <div><h2>Languages</h2></div>
-                <div class="about-buttons">
-                  <div>Ruby on Rails</div>
-                  <div>Ruby</div>
-                  <div>Html</div>
-                  <div>CSS</div>
-                </div>
-              </li>
-
-              <li class="item-list">
-                <div class="icon">
-                  <img src="images/frameworks.png" alt="icon frameworks" />
-                </div>
-                <div><h2>Frameworks</h2></div>
-                <div class="about-buttons">
-                  <div>Bootstrap</div>
-                  <div>Ruby on rails</div>
-                  <div>RSpec</div>
-                  <div>Capybara</div>
-                  <div>Selenium</div>
-                </div>
-              </li>
-              <li class="item-list">
-                <div class="icon">
-                  <img src="images/skills.png" alt="icon skills" />
-                </div>
-                <div><h2>Skills</h2></div>
-                <div class="about-buttons">
-                  <div>Codekit</div>
-                  <div>Github</div>
-                  <div>Codepen</div>
-                  <div>Gitlab</div>
-                  <div>Terminal</div>
-                </div>
-              </li>
-            </ul>
-          </div>
         </section>
-      </div>
+
+        <div class="resume-button">
+          <button type="button">Get My Resume</button>
+        </div>
+        <div class="skills-container">
+          <ul>
+            <li class="item-list">
+              <div class="icon">
+                <img src="images/language.png" alt="icon languages" />
+              </div>
+              <div><h2>Languages</h2></div>
+              <div class="about-buttons">
+                <div>Ruby on Rails</div>
+                <div>Ruby</div>
+                <div>Html</div>
+                <div>CSS</div>
+              </div>
+            </li>
+
+            <li class="item-list">
+              <div class="icon">
+                <img src="images/frameworks.png" alt="icon frameworks" />
+              </div>
+              <div><h2>Frameworks</h2></div>
+              <div class="about-buttons">
+                <div>Bootstrap</div>
+                <div>Ruby on rails</div>
+                <div>RSpec</div>
+                <div>Capybara</div>
+                <div>Selenium</div>
+              </div>
+            </li>
+            <li class="item-list">
+              <div class="icon">
+                <img src="images/skills.png" alt="icon skills" />
+              </div>
+              <div><h2>Skills</h2></div>
+              <div class="about-buttons">
+                <div>Codekit</div>
+                <div>Github</div>
+                <div>Codepen</div>
+                <div>Gitlab</div>
+                <div>Terminal</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
 
       <section class="contact-section">
         <div>
