add skills list style to respond widescreen devices

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <button type="button">Get My Resume</button>
         </div>
         <div class="skills-container">
-          <ul>
+          <ul class="skills-list">
             <li class="item-list">
               <div class="icon">
                 <img src="images/language.png" alt="icon languages" />
