--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <p>
               I can help you build a product , feature or website Look through
               some of my work and experience! If you like what you see and have
-              a project you need coded, don’t hestiate to contact me.
+              a project you need coded, don't hesitate to contact me.
             </p>
           </div>
           <div class="icon-wrapper">
@@ -240,46 +240,51 @@
       </section>
 
       <section class="contact-section">
-        <div>
-          <h2>
-            I'm always interested in hearing about new projects, so if you'd
-            like to chat please get in touch.
-          </h2>
+        <div class="contact-background">
+          <div class="contact-wrapper">
+            <div class="form-title">
+              <h2>
+                I'm always interested in hearing about new projects, so if you'd
+                like to chat please get in touch.
+              </h2>
+            </div>
+            <div>
+              <form action="https://formspree.io/f/mjvlodlr" method="POST">
+                <ul class="contact-form">
+                  <li>
+                    <input
+                      type="text"
+                      name="name"
+                      placeholder="Full name"
+                      maxlength="30"
+                      required
+                    />
+                  </li>
+                  <li>
+                    <input
+                      type="email"
+                      name="email"
+                      placeholder="Email address"
+                      required
+                    />
+                  </li>
+                  <li>
+                    <textarea
+                      placeholder="Enter text here"
+                      name="message"
+                      maxlength="500"
+                      required
+                    ></textarea>
+                  </li>
+                  <li>
+                    <button type="submit" class="button">Get in touch</button>
+                  </li>
+                </ul>
+              </form>
+            </div>
+          </div>
         </div>
-        <div class="contact-form">
-          <form action="https://formspree.io/f/mjvlodlr" method="POST">
-            <ul>
-              <li>
-                <input
-                  type="text"
-                  name="name"
-                  placeholder="Full name"
-                  maxlength="30"
-                  required
-                />
-              </li>
-              <li>
-                <input
-                  type="email"
-                  name="email"
-                  placeholder="Email address"
-                  required
-                />
-              </li>
-              <li>
-                <textarea
-                  placeholder="Enter text here"
-                  name="message"
-                  maxlength="500"
-                  required
-                ></textarea>
-              </li>
-              <li>
-                <button type="submit" class="button">Get in touch</button>
-              </li>
-            </ul>
-          </form>
-        </div>
+
         <div class="icon-wrapper">
           <ul class="icons">
             <li>
