update icon border

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           </div>
         </div>
 
-        <div class="icon-wrapper">
+        <div class="icon-wrapper border-top">
           <ul class="icons">
             <li>
               <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
