change page title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <!-- Title -->
-    <title>My Portfolio</title>
+    <title>Haji Bamsi's Portfolio</title>
   </head>
   <body>
     <main class="main-container">
