update alt text to images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <section class="header-mobile">
         <!-- visible to mobile platforms only-->
         <div><a href="#">Welcome</a></div>
-        <div><img src="images/toggle.png" alt="toggle icon" /></div>
+        <div><img src="images/toggle.png" alt="toggle menu icon" /></div>
         <!-- end visible to mobile only-->
       </section>
       <section class="top-section">
@@ -52,13 +52,13 @@
           <div class="icon-wrapper">
             <ul class="icons">
               <li>
-                <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
+                <a href="#"><img src="images/cat.png" alt="github icon" /></a>
               </li>
               <li>
-                <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
+                <a href="#"><img src="images/in.png" alt="linkedin icon" /></a>
               </li>
               <li>
-                <a href="#"><img src="images/v.png" alt="two icon" /></a>
+                <a href="#"><img src="images/v.png" alt="angle.co icon" /></a>
               </li>
               <li>
                 <a href="#"
@@ -72,7 +72,7 @@
           </div>
 
           <div class="down-arrow">
-            <img src="images/arrow.png" alt="arrow" />
+            <img src="images/arrow.png" alt="down arrow icon" />
           </div>
         </section>
       </section>
@@ -198,7 +198,7 @@
           <ul class="skills-list">
             <li class="item-list">
               <div class="icon">
-                <img src="images/language.png" alt="icon languages" />
+                <img src="images/language.png" alt="My languages" />
               </div>
               <div><h2>Languages</h2></div>
               <div class="about-buttons">
@@ -211,7 +211,7 @@
 
             <li class="item-list">
               <div class="icon">
-                <img src="images/frameworks.png" alt="icon frameworks" />
+                <img src="images/frameworks.png" alt="My frameworks" />
               </div>
               <div><h2>Frameworks</h2></div>
               <div class="about-buttons">
@@ -224,7 +224,7 @@
             </li>
             <li class="item-list">
               <div class="icon">
-                <img src="images/skills.png" alt="icon skills" />
+                <img src="images/skills.png" alt="My skills" />
               </div>
               <div><h2>Skills</h2></div>
               <div class="about-buttons">
@@ -288,13 +288,13 @@
         <div class="icon-wrapper border-top">
           <ul class="icons">
             <li>
-              <a href="#"><img src="images/cat.png" alt="cat icon" /></a>
+              <a href="#"><img src="images/cat.png" alt="github icon" /></a>
             </li>
             <li>
-              <a href="#"><img src="images/in.png" alt="linkldn icon" /></a>
+              <a href="#"><img src="images/in.png" alt="linkedin icon" /></a>
             </li>
             <li>
-              <a href="#"><img src="images/v.png" alt="two icon" /></a>
+              <a href="#"><img src="images/v.png" alt="angle.co icon" /></a>
             </li>
             <li>
               <a href="#"
