--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 /></a>
               </li>
               <li>
-                <a href="#"><img src="images/m.png" alt="m icon" /></a>
+                <a href="#"><img src="images/m.png" alt="Medium icon" /></a>
               </li>
             </ul>
           </div>
