add javascript to index page

--- a/index.html
+++ b/index.html
@@ -311,5 +311,7 @@
         <p>myemailhere@email.com</p>
       </footer>
     </main>
+
+    <script type="javascript" href="js/java.js"></script>
   </body>
 </html>
