Add closeIcon image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <!-- visible to mobile platforms only-->
         <div><a href="#">Welcome</a></div>
         <div><img src="images/toggle.png" alt="toggle menu icon" /></div>
+        <div class="closeIcon"><img src="./images/Cancel.svg" alt=""></div>
         <!-- end visible to mobile only-->
       </section>
       <section class="top-section">
