Add link to menu

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
           <div class="nav-desktop">
             <nav class="nav">
               <ul>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -78,7 +78,7 @@
         </section>
       </section>
 
-      <section class="work-container">
+      <section id="portfolio" class="work-container">
         <div class="work-title">
           <h2>My Recent Works</h2>
         </div>
@@ -178,7 +178,7 @@
         </div>
       </section>
 
-      <section class="about-container">
+      <section id="about" class="about-container">
         <section class="about-top">
           <header class="about-header">
             <h2>About me</h2>
@@ -240,7 +240,7 @@
         </div>
       </section>
 
-      <section class="contact-section">
+      <section id="contact" class="contact-section">
         <div class="contact-background">
           <div class="contact-wrapper">
             <div class="form-title">
@@ -313,6 +313,6 @@
       </footer>
     </main>
 
-    <script type="javascript" href="js/java.js"></script>
+    <script type="text/javascript" src="js/java.js"></script>
   </body>
 </html>
