--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="main-container">
       <section class="header-mobile">
         <!-- visible to mobile platforms only-->
-        <div><a href="#">Welcome</a></div>
+        <div><a href="#" class="logo-brand">Welcome</a></div>
         <div class="toggle-icon">
           <img src="images/toggle.png" alt="toggle menu icon" />
         </div>
@@ -34,9 +34,9 @@
           <div class="nav-desktop hide">
             <nav class="nav">
               <ul>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#portfolio" class="nav-link"> Portfolio</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
               </ul>
             </nav>
           </div>
