add model container to the index page

--- a/index.html
+++ b/index.html
@@ -87,98 +87,7 @@
           <h2>My Recent Works</h2>
         </div>
         <div>
-          <ul class="work-list">
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h3>Multi-Post Stories Gain+Glory</h3>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
-                </div>
-                <div class="button-link">
-                  <button class="button" type="button">See Project</button>
-                </div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h3>Multi-Post Stories Gain+Glory</h3>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
-                </div>
-                <div class="button-link">
-                  <button class="button" type="button">See Project</button>
-                </div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h3>Multi-Post Stories Gain+Glory</h3>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
-                </div>
-                <div class="button-link">
-                  <button class="button" type="button">See Project</button>
-                </div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h3>Multi-Post Stories Gain+Glory</h3>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
-                </div>
-                <div class="button-link">
-                  <button class="button" type="button">See Project</button>
-                </div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h3>Multi-Post Stories Gain+Glory</h3>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
-                </div>
-                <div class="button-link">
-                  <button class="button" type="button">See Project</button>
-                </div>
-              </div>
-            </li>
-            <li class="list-item">
-              <div class="image-placeholder"></div>
-              <div class="image-desc">
-                <h3>Multi-Post Stories Gain+Glory</h3>
-                <div class="buttons">
-                  <div>Ruby on rails</div>
-                  <div>css</div>
-                  <div>JavScript</div>
-                  <div>html</div>
-                </div>
-                <div class="button-link">
-                  <button class="button" type="button">See Project</button>
-                </div>
-              </div>
-            </li>
-          </ul>
+          <ul class="work-list" id="project-list"></ul>
         </div>
       </section>
 
@@ -316,6 +225,8 @@
         <p>myemailhere@email.com</p>
       </footer>
     </main>
+
+    <div class="model-container" id="model-container"></div>
 
     <script type="text/javascript" src="js/java.js"></script>
   </body>
