add form validation function

--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
                   </li>
                   <li>
                     <input
-                      type="email"
+                      type="text"
                       name="email"
                       placeholder="Email address"
+                      id="email"
                       required
                     />
                   </li>
@@ -190,6 +191,7 @@
                       required
                     ></textarea>
                   </li>
+                  <li class="error-message" id="error"></li>
                   <li>
                     <button type="submit" class="button">Get in touch</button>
                   </li>
