Added ID's to form

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               </h2>
             </div>
             <div>
-              <form action="https://formspree.io/f/mjvlodlr" method="POST">
+              <form action="https://formspree.io/f/mjvlodlr" id="form" method="POST">
                 <ul class="contact-form">
                   <li>
                     <input
@@ -171,6 +171,7 @@
                       name="name"
                       placeholder="Full name"
                       maxlength="30"
+                      id="name"
                       required
                     />
                   </li>
@@ -186,6 +187,7 @@
                   <li>
                     <textarea
                       placeholder="Enter text here"
+                      id="message"
                       name="message"
                       maxlength="500"
                       required
