Add new implementation of smooth scrolling between several areas/section and fix null render value  formdata

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     </main>
 
     <div class="model-container" id="model-container"></div>
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/java.js"></script>
   </body>
 </html>
