--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/images/icon.ico" />
     <link rel="stylesheet" href="css/style.css" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -45,39 +46,43 @@
         <article>
           <div class="header-title">
             <h1>Hey there. I'm Bamsi</h1>
-            <h2 class="color-green">I'm a software developer</h2>
+            <h2 class="color-green">I'm a Full-Stack developer</h2>
           </div>
           <div class="header-body">
             <p>
-              I can help you build a product , feature or website Look through
-              some of my work and experience! If you like what you see and have
-              a project you need coded, don't hesitate to contact me.
+              Welcome to my Portfolio! I am Bamsi, a Full-stack developer and
+              Software architect looking for a remote programming job!
             </p>
           </div>
           <div class="icon-wrapper">
             <ul class="icons">
               <li>
-                <a href="#"><img src="images/cat.png" alt="github icon" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="images/in.png" alt="linkedin icon" /></a>
-              </li>
-              <li>
-                <a href="#"><img src="images/v.png" alt="angle.co icon" /></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><img src="images/twitter.png" alt="twitter icon"
+                <a href="https://github.com/bamsi"
+                  ><img src="images/cat.png" alt="github icon"
                 /></a>
               </li>
               <li>
-                <a href="#"><img src="images/m.png" alt="Medium icon" /></a>
+                <a href="https://www.linkedin.com/in/bamsi/"
+                  ><img src="images/in.png" alt="linkedin icon"
+                /></a>
+              </li>
+              <li>
+                <a href="https://angel.co/u/haji-bamsi"
+                  ><img src="images/v.png" alt="angle.co icon"
+                /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/bamsi"
+                  ><img src="images/twitter.png" alt="twitter icon"
+                /></a>
               </li>
             </ul>
           </div>
 
           <div class="down-arrow">
-            <img src="images/arrow.png" alt="down arrow icon" />
+            <a href="#portfolio">
+              <img src="images/arrow.png" alt="down arrow icon" />
+            </a>
           </div>
         </article>
       </section>
@@ -98,15 +103,19 @@
           </header>
           <div class="about-desc">
             <p>
-              I can help you build a product , feature or website Look through
-              some of my work and experience! If you like what you see and have
-              a project you need coded, don’t hestiate to contact me.
+              I am an ICT professional with experience working on Tanzania's
+              many information systems initiatives. I am very resourceful,
+              imaginative, talented, and capable. I'm an expert in developing
+              and designing systems for human resources, finances, and health.
             </p>
           </div>
         </section>
 
-        <div class="resume-button">
-          <button type="button">Get My Resume</button>
+        <form method="get" action="images/bamsi.pdf">
+          <div class="resume-button">
+            <button type="submit">Get My Resume</button>
+          </div>
+        </form>
         </div>
         <div class="skills-container">
           <ul class="skills-list">
@@ -116,10 +125,15 @@
               </div>
               <div><h3>Languages</h3></div>
               <div class="about-buttons">
-                <div>Ruby on Rails</div>
                 <div>Ruby</div>
                 <div>Html</div>
                 <div>CSS</div>
+                <div>Javascript</div>
+                <div>Typescript</div>
+                <div>SQL</div>
+                <div>React</div>
+                <div>Redux</div>
+                <div>PHP</div>
               </div>
             </li>
 
@@ -131,6 +145,7 @@
               <div class="about-buttons">
                 <div>Bootstrap</div>
                 <div>Ruby on rails</div>
+                <div>Angular</div>
                 <div>RSpec</div>
                 <div>Capybara</div>
                 <div>Selenium</div>
@@ -163,7 +178,11 @@
               </h2>
             </div>
             <div>
-              <form action="https://formspree.io/f/mjvlodlr" id="form" method="POST">
+              <form
+                action="https://formspree.io/f/mjvlodlr"
+                id="form"
+                method="POST"
+              >
                 <ul class="contact-form">
                   <li>
                     <input
@@ -206,27 +225,30 @@
         <div class="icon-wrapper border-top">
           <ul class="icons">
             <li>
-              <a href="#"><img src="images/cat.png" alt="github icon" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/in.png" alt="linkedin icon" /></a>
-            </li>
-            <li>
-              <a href="#"><img src="images/v.png" alt="angle.co icon" /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img src="images/twitter.png" alt="twitter icon"
+              <a href="https://github.com/bamsi"
+                ><img src="images/cat.png" alt="github icon"
               /></a>
             </li>
             <li>
-              <a href="#"><img src="images/m.png" alt="Medium icon" /></a>
+              <a href="https://www.linkedin.com/in/bamsi/"
+                ><img src="images/in.png" alt="linkedin icon"
+              /></a>
+            </li>
+            <li>
+              <a href="https://angel.co/u/haji-bamsi"
+                ><img src="images/v.png" alt="angle.co icon"
+              /></a>
+            </li>
+            <li>
+              <a href="https://twitter.com/bamsi"
+                ><img src="images/twitter.png" alt="twitter icon"
+              /></a>
             </li>
           </ul>
         </div>
       </section>
       <footer class="footer-section">
-        <p>myemailhere@email.com</p>
+        <p>hibamsi@email.com</p>
       </footer>
     </main>
 
